--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "GraphLaplacians"
 uuid = "a1251efa-393a-423f-9d7b-faaecba535dc"
-authors = ["Yueh-Hua Tu"]
+authors = ["Yueh-Hua Tu <a504082002@gmail.com>"]
 version = "0.1.0"
 
 [deps]
@@ -12,7 +12,11 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-julia = "1.4, 1.5"
+LightGraphs = "1.3"
+MetaGraphs = "0.6"
+SimpleWeightedGraphs = "1.1"
+Zygote = "0.4 - 0.5"
+julia = "1.4 - 1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
