--- a/Project.toml
+++ b/Project.toml
@@ -4,16 +4,15 @@ authors = ["Yueh-Hua Tu <a504082002@gmail.com>"]
 version = "0.1.3"
 
 [deps]
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
 LightGraphs = "1.3"
 MetaGraphs = "0.6"
-Zygote = "0.4 - 0.6"
 julia = "1.4 - 1.6"
 
 [extras]
